results/SpecGenBench/2-shot/log-RepeatedChar-2023_11_06_03_32_26.txt
import java.util.HashSet;

class RepeatedChar {
    //@ requires s != null;
    //@ ensures \result == ' ' || (\exists int i; 0 <= i && i < s.length(); s.charAt(i) == \result);
    public char repeatedCharacter(String s) {
        Set<Character> seen = new HashSet<Character>();
        
	//@ maintaining 0 <= i && i <= s.length();
	//@ maintaining (\forall int j; 0 <= j && j < i; !seen.contains(s.charAt(j)));
	//@ decreases s.length() - i;
        for (int i = 0; i < s.length(); i++) {
            char ch = s.charAt(i);
            if (!seen.add(ch)) {
                return ch;
            }
        }
        // impossible
        return ' ';
    }
}
/home/max/Documents/JMLGPT/tmp/RepeatedChar.java:7: error: cannot find symbol
        Set<Character> seen = new HashSet<Character>();
        ^
  symbol:   class Set
  location: class RepeatedChar
1 error

